# sitcav

./: .env.dist  .env.dist.php  .flaskenv  .gitignore  AGENTS.md  CODIGO_APARTADOS_INVENTARIO.md  COMO_INICIAR.md  GEMINI.md  README.md  README_INSTALACION.md  add_custom_category.py  add_delete_category.py  add_ids_to_nav.py  apartado.py  apartados.py  apartados_inventario.js  api.py  app.js.backup  app.js.backup2  app.py  app_refunds_js.js  app_refunds_snippet.py  auth.py  backup.py  biome.json  categoria.py  categorias.py  check_data.py  cliente.py  clientes.py  composer.json  compra.py  compras.py  consultas.py  cotizacion.py  cotizacion_model.py  credentials.txt  dashboard.py  db.py  debug.py  (+90 more)
.github/: copilot-instructions.md
app/: configuraciones.php  index.php
bd/: datos-de-prueba.sql  esquema.sqlite.sql
blueprints/: apartados.py  api.py  auth.py  backup.py  categorias.py  clientes.py  compras.py  consultas.py  cotizacion.py  dashboard.py  debug.py  empleados.py  estadisticas.py  estados.py  factura.py  inventario.py  localidades.py  negocio.py  pagos.py  productos.py  proveedores.py  reembolsos.py  reportes.py  sectores.py  tipos_pago.py  uploads.py  usuarios.py  ventas.py
comandos/: compilar.mjs  configuraciones.mjs  desarrollar.mjs
database/: .htaccess  scheme.sqlite.sql
docs/: Diagramas.drawio  Diagramas.mdj
frontend/: astro.config.mjs  package-lock.json  package.json
instance/: system_data.db
models/: apartado.py  compra.py  cotizacion.py  detalle_compra.py  detalle_venta.py  estado.py  localidad.py  movimiento_inventario.py  pago.py  venta.py  (+6 more)
(+291 files in other folders)
