[project]
name = "sitcav"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
  "flask>=3.1.3",
  "flask-sqlalchemy>=3.1.1",
  "python-dotenv>=1.2.2",
  "reportlab>=4.5.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.13",
    "watchdog>=6.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
